--- a/slackminion/templates/status.html
+++ b/slackminion/templates/status.html
@@ -21,6 +21,11 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-sm-3">
+            Uptime: {% if uptime.days > 0 %}{{ uptime.days|pluralize('day') }} {% endif %}{% if uptime.hours > 0 %}{{ uptime.hours|pluralize('hour') }} {% endif %}{% if uptime.minutes > 0 %}{{ uptime.minutes|pluralize('minute') }} {% endif %}{{ uptime.seconds|pluralize('second') }}
+        </div>
+    </div>
+    <div class="row">
         <div class="col-sm-*">
             <h3>Running Plugins</h3>
         </div>
